# uber-controller

./: .gitignore  CMakeLists.txt
Shared/: Protocol.h  SharedMessages.h
group-manager/: CMakeLists.txt
group-manager/Source/: GroupReporter.cpp  GroupReporter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
middleware/: CMakeLists.txt  middleware.json
middleware/Source/: ClientConnection.h  Config.cpp  Config.h  Main.cpp  McuProtocol.h  MeterReceiver.cpp  MeterReceiver.h  MiddlewareApp.cpp  MiddlewareApp.h  MidiEngine.cpp  MidiEngine.h  PluginServer.cpp  PluginServer.h  SerialServer.cpp  SerialServer.h  TcpServer.cpp  TcpServer.h  TrackRegistry.cpp  TrackRegistry.h
plugin/: CMakeLists.txt
plugin/Source/: ChannelReporter.cpp  ChannelReporter.h  MeterSender.cpp  MeterSender.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PslContextBridge.cpp  PslContextBridge.h
simulator/: CMakeLists.txt
simulator/Source/: ControllerClient.cpp  ControllerClient.h  DebugPanel.cpp  DebugPanel.h  Main.cpp  MainComponent.cpp  MainComponent.h  MessageBus.h  SimChannelStrip.cpp  SimChannelStrip.h  SimFader.cpp  SimFader.h  SimTransport.cpp  SimTransport.h  SimVPot.cpp  SimVPot.h  SimVcaStrip.cpp  SimVcaStrip.h  TransportInfoPanel.cpp  TransportInfoPanel.h
